--- a/OEBPS/Styles/stylesheet.css
+++ b/OEBPS/Styles/stylesheet.css
@@ -118,10 +118,10 @@ table td {
   height: 15px;
   visibility: hidden;
 }
-/*.shu-ming {
-  text-decoration: currentColor wavy underline;
+.shu-ming {
+  text-decoration: #777 wavy underline;
   text-decoration-thickness: 1px;
-}*/
+}
 p:before{
   content: '';
   display: block;
